--- a/transforms/ri/ocri/r70/gov.ri.code.title.02.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.02.html
@@ -16656,11 +16656,13 @@
       <p>
        P.L. 1993, ch. 106, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t02c24s2-24-1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed United States Code references in articles I, IV, and V were inserted by the compiler.
       </p>
