--- a/transforms/ri/ocri/r70/gov.ri.code.title.09.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.09.html
@@ -12298,9 +12298,12 @@
         </cite>
         (l), and not for lack of prosecution under
         <cite class="ocri">
-         R.I. Super. Ct. R. Civ. P. 4
+         <cite class="ocri">
+          R.I. Super. Ct. R. Civ. P. 4
+         </cite>
+         1
         </cite>
-        1(b), the plaintiff’s claim is protected by
+        (b), the plaintiff’s claim is protected by
         <cite class="ocri">
          R.I. Gen. Laws
         </cite>
@@ -44189,12 +44192,9 @@
         <cite class="ocri">
          3 R.I. 59
         </cite>
-        ,
+        , 5
         <cite class="ocri">
-         5
-         <cite class="ocri">
-          3 R.I. 59
-         </cite>
+         3 R.I. 59
         </cite>
         , 163 A. 751,
         <cite class="ocri">
@@ -56435,11 +56435,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c26s9-26-4-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed United States Code reference in subdivision (11)(iii) was inserted by the compiler.
       </p>
