--- a/transforms/ri/ocri/r70/gov.ri.code.title.11.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.11.html
@@ -13273,11 +13273,13 @@
        P.L. 2021, ch. 204, § 1, and
        P.L. 2021, ch. 205, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t11c09s11-9-13.4-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The Federal Food, Drug and Cosmetic Act, referred to in this section, is codified at 21 U.S.C. § 301 et seq.
       </p>
@@ -47631,11 +47633,13 @@
       <p>
        P.L. 2018, ch. 259, § 2, as amended by P.L. 2019, ch. 28, § 2 and P.L. 2019, ch. 31, § 2, provides that the amendment to this section by that act takes effect on July 1, 2020, and shall apply to all persons who have been convicted of an offense that required or will require registration as provided by this act.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t11c37.1s11-37.1-7-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        42 U.S.C. § 5119a, referred to in this section, has been transferred to 34 U.S.C. § 40102 by the compilers of the United States Code.
       </p>
@@ -48236,11 +48240,13 @@
       <p>
        P.L. 2018, ch. 259, § 2, as amended by P.L. 2019, ch. 28, § 2 and P.L. 2019, ch. 31, § 2, provides that the amendment to this section by that act takes effect on July 1, 2020, and shall apply to all persons who have been convicted of an offense that required or will require registration as provided by this act.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t11c37.1s11-37.1-12-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        42 U.S.C. § 16911, referred to in this section, has been transferred to 34 U.S.C. § 20911 by the compilers of the United States Code.
       </p>
@@ -59488,11 +59494,13 @@
        applications of this act, which can be given effect without the invalid provision or application, and
        to this end the provisions of this act are declared to be severable.”
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t11c47s11-47-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The Gun Control Act of 1968, referred to in this section, is codified in part at 18 U.S.C. § 921 et seq.
       </p>
