--- a/transforms/ri/ocri/r70/gov.ri.code.title.16.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.16.html
@@ -12607,11 +12607,13 @@
       <p>
        P.L. 2014, ch. 438, § 1, and P.L. 2014, ch. 459, § 1 enacted identical amendments to this section
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c7.1s16-7.1-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subdivision (c)(1) was inserted by the compiler.
        The No Child Left Behind Act of 2001 is classified throughout the United States Code, but appears primarily as 20 U.S.C. § 6301 et seq.
@@ -12991,11 +12993,13 @@
       <p>
        P.L. 1997, ch. 30, art. 31, § 1; P.L. 1998, ch. 31, art. 31, § 1; P.L. 1999, ch. 31, art. 23, § 3; P.L. 2002, ch. 65, art. 18, § 1; P.L. 2002, ch. 400, § 1; P.L. 2003, ch. 219, § 1; P.L. 2003, ch. 310, § 1; P.L. 2003, ch. 321, § 1; P.L. 2003, ch. 337, § 1; P.L. 2003, ch. 376, art. 9, § 7; P.L. 2004, ch. 456, § 1; P.L. 2005, ch. 117, art. 13, § 6; P.L. 2009, ch. 5, art. 13, § 1; P.L. 2009, ch. 68, art. 3, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c7.1s16-7.1-10-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subsection (a) was inserted by the compiler.
       </p>
@@ -13592,11 +13596,13 @@
       <p>
        P.L. 1998, ch. 31, art. 31, § 3; P.L. 1999, ch. 31, art. 23, § 3; P.L. 2000, ch. 55, art. 20, § 1; P.L. 2001, ch. 77, art. 22, § 2; P.L. 2002, ch. 65, art. 18, § 1; P.L. 2003, ch. 376, art. 9, § 7; P.L. 2004, ch. 595, art. 23, § 2; P.L. 2005, ch. 117, art. 13, § 6; P.L. 2006, ch. 246, art. 19, § 2; P.L. 2007, ch. 73, art. 21, § 2; P.L. 2008, ch. 100, art. 38, § 1; P.L. 2008, ch. 151, § 1; P.L. 2008, ch. 182, § 1; P.L. 2009, ch. 5, art. 13, § 1; P.L. 2009, ch. 68, art. 3, § 1; P.L. 2010, ch. 23, art. 13, § 1; P.L. 2011, ch. 151, art. 5, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c7.1s16-7.1-15-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subdivision (k)(1) was inserted by the compiler.
       </p>
@@ -14761,11 +14767,13 @@
        </cite>
        et seq.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c08s16-8-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The Smith-Hughes Vocational Education Act was formerly
        found at 20 U.S.C. § 11 et seq. For present similar provisions, see the Carl D. Perkins Vocational and Technical Education Act of 1998 at 20 U.S.C.S. § 2301 et seq.
@@ -14802,11 +14810,13 @@
       <p>
        In 2021, “and Providence Plantations” was deleted following “The state of Rhode Island” at the direction of the Law Revision Director to reflect the 2020 amendments to the state constitution that changed the state’s name.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c08s16-8-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The federal act concerning vocational education referred to was repealed in 1968. Comparable provisions may be found as 20 U.S.C. § 2301 et seq.
       </p>
@@ -38113,11 +38123,13 @@
       <p>
        P.L. 2019, ch. 88, art. 9, § 16, provides that the amendment to this section by that act takes effect on February 1, 2020.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c32.1s16-32.1-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 501(c)(3) of the Internal Revenue Code, referred to in this section, is codified as 26 U.S.C. § 501(c)(3).
       </p>
@@ -47808,11 +47820,13 @@
       <p>
        In 2021, “and Providence Plantations” was deleted following “state of Rhode Island” in this section at the direction of the Law Revision Director to reflect the 2020 amendments to the state constitution that changed the state's name.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c57s16-57-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed federal reference in subdivision (8) was inserted by the compiler.
       </p>
@@ -47980,11 +47994,13 @@
       <p>
        P.L. 1997, ch. 81, § 2; P.L. 1997, ch. 91, § 2; P.L. 2001, ch. 364, § 2; P.L. 2015, ch. 141, art. 7, § 6.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c57s16-57-6.1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed references to the United States Code in subsections (e) and (f) were inserted by the compiler.
       </p>
@@ -48012,11 +48028,13 @@
       <p>
        P.L. 1997, ch. 81, § 2; P.L. 1997, ch. 91, § 2; P.L. 2001, ch. 364, § 2; P.L. 2015, ch. 141, art. 7, § 6.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c57s16-57-6.2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subsection (d) was inserted by the compiler.
       </p>
@@ -50069,11 +50087,13 @@
       <p>
        P.L. 2021, ch. 346, § 1, and P.L. 2021, ch. 365, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c59s16-59-9.3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The Family Educational Rights and Privacy Act, referred to in this section, is codified as 20 U.S.C. § 1232g.
       </p>
