--- a/transforms/ri/ocri/r70/gov.ri.code.title.17.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.17.html
@@ -4469,11 +4469,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c07s17-7-5-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed references in subsections (a)(14) and (f) were inserted by the compiler.
       </p>
@@ -20084,11 +20086,13 @@
       <p>
        P.L. 2003, ch. 234, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c19s17-19-24.1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed references to the United States Code were inserted by the compiler.
       </p>
@@ -22688,11 +22692,13 @@
       <p>
        P.L. 2020, ch. 64, § 1, and P.L. 2020, ch. 74, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c20s17-20-2.2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Pub. L. No. 99-410, the Uniformed and Overseas Citizens Absentee Voting Act, referred to in this section, is codified at 52 U.S.C. § 20301 et seq., 39 U.S.C. § 3406, and 18 U.S.C. §§ 608, 609.
       </p>
@@ -22939,11 +22945,13 @@
       <p>
        P.L. 2003, ch. 234, § 4.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c20s17-20-6.2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code was inserted by the compiler.
       </p>
@@ -24359,11 +24367,13 @@
       <p>
        P.L. 1976, ch. 258, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c21.1s17-21.1-1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Public Law 94-203 was codified as 42 U.S.C. § 1973dd et seq. before being repealed in 1987. Present comparable provisions are found as 42 U.S.C. § 1973ff et seq.
       </p>
