--- a/transforms/ri/ocri/r70/gov.ri.code.title.19.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.19.html
@@ -16131,11 +16131,13 @@
       <p>
        P.L. 2006, ch. 243, § 3; P.L. 2006, ch. 291, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t19c14.8s19-14.8-18-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 101 of the Electronic Signatures in Global and National Commerce Act, referred to in this section, is codified as 15 U.S.C. § 7001.
       </p>
@@ -18622,11 +18624,13 @@
       <p>
        P.L. 2009, ch. 148, § 3; P.L. 2009, ch. 160, § 3; P.L. 2010, ch. 56, § 2; P.L. 2010, ch. 64, § 2; P.L. 2011, ch. 145, § 3; P.L. 2015, ch. 200, § 2; P.L. 2015, ch. 202, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t19c14.10s19-14.10-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 3 of the Federal Deposit Insurance Act, referred to in this section, is codified as 12 U.S.C. § 1813.
       </p>
@@ -18714,11 +18718,13 @@
       <p>
        P.L. 2009, ch. 148, § 3; P.L. 2009, ch. 160, § 3; P.L. 2010, ch. 56, § 2; P.L. 2010, ch. 64, § 2; P.L. 2011, ch. 145, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t19c14.10s19-14.10-4-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 103 of the Truth in Lending Act, referred to in this section, is codified as 15 U.S.C. § 1602.
       </p>
