--- a/transforms/ri/ocri/r70/gov.ri.code.title.21.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.21.html
@@ -1101,11 +1101,13 @@
        </cite>
        , as enacted by P.L. 1962, ch. 80, § 1; P.L. 1963, ch. 91, § 1) was repealed by P.L. 1968, ch. 158, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t21c02s21-2-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        21 C.F.R. Part 133 and 21 C.F.R. Part 184, referred to in this section, may be found at 21 C.F.R. § 133.3 et seq., and 21 C.F.R. § 184.1 et seq.
       </p>
@@ -16625,11 +16627,13 @@
        <p>
         P.L. 2018, ch. 152, § 1, and P.L. 2018, ch. 252, § 1 enacted identical versions of this section.
        </p>
-       <p>
+      </div>
+      <div>
+       <h4 id="t21c28asIIIs21-28-3.33-federalactreferences">
         <b>
          Federal Act References.
         </b>
-       </p>
+       </h4>
        <p>
         42 C.F.R. Part 2 may be found at 42 C.F.R. § 2.1 et seq.
        </p>
