--- a/transforms/ri/ocri/r70/gov.ri.code.title.30.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.30.html
@@ -6660,11 +6660,13 @@
       <p>
        P.L. 2016, ch. 349, § 1, and P.L. 2016, ch. 366, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t30c11s30-11-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subsection (b) was inserted by the compiler.
       </p>
