--- a/transforms/ri/ocri/r70/gov.ri.code.title.31.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.31.html
@@ -53903,11 +53903,13 @@
       <p>
        P.L. 2021, ch. 192, § 1 and P.L. 2021, ch. 193, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t31c25s31-25-27.10-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 C.F.R. Part 172, Subpart F, referred to in this section, may be found at 49 C.F.R. § 172.500 et seq.
       </p>
@@ -53992,11 +53994,13 @@
       <p>
        P.L. 2020, ch. 55, § 2 provides: “This act shall take effect thirty (30) days after passage [July 26, 2020].”
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t31c25s31-25-27.11-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 C.F.R. Part 172, Subpart F, referred to in this section, may be found at 49 C.F.R. § 172.500 et seq.
       </p>
