--- a/transforms/ri/ocri/r70/gov.ri.code.title.32.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.32.html
@@ -4761,11 +4761,13 @@
       <p>
        P.L. 2001, ch. 275, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t32c07s32-7-10-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in paragraph (1)(i) was inserted by the compiler.
       </p>
