--- a/transforms/ri/ocri/r70/gov.ri.code.title.36.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.36.html
@@ -11649,11 +11649,13 @@
       <p>
        P.L. 2000, ch. 199, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c09s36-9-2.1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code was inserted by the compiler.
       </p>
@@ -22142,11 +22144,13 @@
       <p>
        P.L. 2008, ch. 9, art. 4, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c12.1s36-12.1-26-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subsection (b) was inserted by the compiler.
       </p>
