--- a/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html
@@ -473,11 +473,13 @@
       <p>
        P.L. 1972, ch. 145, § 1; P.L. 1976, ch. 206, § 1; P.L. 1979, ch. 94, § 1; P.L. 1989, ch. 492, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40.1c01s40.1-1-8-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        42 U.S.C. § 6000 et seq., referred to in this section, was repealed in 2000 by Pub. L. No. 106-402, Title IV, § 401(a).
        For similar provisions, see 42 U.S.C. § 15001 et seq.
@@ -595,11 +597,13 @@
       <p>
        P.L. 2008, ch. 100, art. 9, § 3, provides: “In order that there be no interruption in the functions of the state council on developmental disabilities, the actual transfer of the state council on developmental disabilities from the executive department to the university of Rhode Island may be postponed after the effective date of this act [July 1, 2008] until such time, as determined by the United States secretary of health and human services and the president of the university of Rhode Island, that the transfer herein provided can best be put into force and effect.”
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40.1c01s40.1-1-9-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        45 C.F.R. §§ 1386.30, 1386.31, and 1386.34, referred to in this section, have been redesignated as 45 C.F.R. §§ 1326.30, 1326.31, and 1326.34.
       </p>
@@ -873,11 +877,13 @@
       <p>
        P.L. 2010, ch. 23, art. 8, § 10, provides that the amendment to this section by that act takes effect upon passage [June 12, 2010] and shall apply retroactively to July 1, 2009.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40.1c01s40.1-1-13-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        For Medicare Part D, referred to in this section, see 42 U.S.C. § 1395w-101 et seq.
       </p>
