--- a/transforms/ri/ocri/r70/gov.ri.code.title.40.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.40.html
@@ -3601,11 +3601,13 @@
       <p>
        P.L. 2008, ch. 100, art. 16, § 1; P.L. 2021, ch. 162, art. 13, § 6, effective July 6, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c5.2s40-5.2-8-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        26 U.S.C. § 3507, referred to in this section, was repealed by Act Aug. 10, 2010, Pub. L. No. 111-226, Title II, Subtitle B, § 219(a)(1).
       </p>
@@ -3973,11 +3975,13 @@
       <p>
        P.L. 2020, ch. 79, art. 2, § 29, provides that the amendment to this section by that act takes effect on December 31, 2020.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c5.2s40-5.2-10-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        26 U.S.C. § 3507, referred to in subsection (f)(3)(viii) of this section, was repealed by Act Aug. 10, 2010, Pub. L. No. 111-226, Title II, Subtitle B, § 219(a)(1).
       </p>
@@ -5184,11 +5188,13 @@
       <p>
        P.L. 2014, ch. 437, § 1; P.L. 2014, ch. 467, § 1; P.L. 2016, ch. 512, art. 1, § 27.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c5.3s40-5.3-4-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Chapter 311 of Title 36, Subtitle II, Part B, of the U.S. Code, referred to in this section, may be found at 36 U.S.C. § 31101 et seq.
       </p>
@@ -7435,11 +7441,13 @@
       <p>
        P.L. 1987, ch. 578, § 1; P.L. 1989, ch. 93, § 1; P.L. 1990, ch. 65, art. 26, § 1; P.L. 1991, ch. 240, § 4; P.L. 1992, ch. 133, art. 53, § 1; P.L. 1998, ch. 31, art. 15, § 2; P.L. 1998, ch. 427, § 2; P.L. 1999, ch. 217, § 2; P.L. 2002, ch. 65, art. 35, § 1; P.L. 2003, ch. 103, art. 3, § 1; P.L. 2008, ch. 100, art. 26, § 1; P.L. 2009, ch. 68, art. 18, § 1; P.L. 2010, ch. 23, art. 3, § 1; P.L. 2011, ch. 151, art. 23, § 1; P.L. 2015, ch. 141, art. 5, § 8; P.L. 2016, ch. 511, art. 1, § 18; P.L. 2019, ch. 88, art. 13, § 3; P.L. 2021, ch. 162, art. 12, § 1, effective July 1, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c06s40-6-27-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1115 of the Social Security Act, referred to in this section, is codified as 42 U.S.C. § 1315.
       </p>
@@ -9827,11 +9835,13 @@
        </cite>
        et seq.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c08s40-8-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1931 of the Social Security Act, referred to in subsection (5)(v) of this section, is codified at 42 U.S.C. §
        1396u-1.
@@ -10721,11 +10731,13 @@
       <p>
        P.L. 1982, ch. 191, § 1; P.L. 1992, ch. 133, art. 28, § 1; P.L. 1995, ch. 99, § 1; P.L. 2012, ch. 241, art. 11, § 5; P.L. 2018, ch. 47, art. 13, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c08s40-8-15-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1940 of Title XIX, referred to in subsection (i) of this section, is codified as 42 U.S.C. § 1396w. Section 1902 is codified as 42 U.S.C. § 1396a, and section 1917 is codified as 42 U.S.C. § 1396p.
       </p>
@@ -10812,11 +10824,13 @@
       <p>
        P.L. 1987, ch. 500, § 2; P.L. 1988, ch. 84, § 26; P.L. 2008, ch. 100, art. 17, § 3; P.L. 2009, ch. 68, art. 23, § 11; P.L. 2013, ch. 144, art. 19, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c08s40-8-17-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1115 of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1315.
       </p>
@@ -11871,11 +11885,13 @@
       <p>
        P.L. 1982, ch. 424, § 1; P.L. 1989, ch. 501, § 2; P.L. 1993, ch. 232, § 1; P.L. 2015, ch. 141, art. 5, § 12.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.2s40-8.2-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
        Title XXI of the Social Security Act is codified at 42 U.S.C. § 1397aa et seq.
@@ -12298,11 +12314,13 @@
       <p>
        P.L. 1982, ch. 424, § 1; P.L. 2015, ch. 141, art. 5, § 12.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.2s40-8.2-10-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
        Title XXI of the Social Security Act is codified at 42 U.S.C. § 1397aa et seq.
@@ -12681,11 +12699,13 @@
       <p>
        P.L. 1982, ch. 424, § 1; P.L. 2015, ch. 141, art. 5, § 12.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.2s40-8.2-22-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
        Title XXI of the Social Security Act is codified at 42 U.S.C. § 1397aa et seq.
@@ -13052,11 +13072,13 @@
        (P.L. 2008, ch. 100, art. 19, § 2), concerning outpatient adjustment
        payments, was repealed by P.L. 2009, ch. 5, art. 16, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.3s40-8.3-6-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
       </p>
@@ -13123,11 +13145,13 @@
        </cite>
        (P.L. 2008, ch. 100, art. 19, § 2), concerning inpatient adjustment payments, was repealed by P.L. 2009, ch. 5, art. 16, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.3s40-8.3-7-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
       </p>
@@ -13178,11 +13202,13 @@
       <p>
        P.L. 2010, ch. 23, art. 15, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.3s40-8.3-8-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
       </p>
@@ -13233,11 +13259,13 @@
       <p>
        P.L. 2011, ch. 151, art. 18, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.3s40-8.3-9-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
       </p>
@@ -13311,11 +13339,13 @@
       <p>
        P.L. 2012, ch. 241, art. 15, § 2; P.L. 2014, ch. 145, art. 17, § 2; P.L. 2019, ch. 88, art. 13, § 6; P.L. 2021, ch. 162, art. 12, § 3, effective July 1, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.3s40-8.3-10-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
       </p>
@@ -13927,11 +13957,13 @@
       <p>
        P.L. 2000, ch. 200, § 2; P.L. 2000, ch. 229, § 2; P.L. 2001, ch. 180, § 85; P.L. 2002, ch. 302, § 1; P.L. 2002, ch. 367, § 1; P.L. 2004, ch. 405, § 1; P.L. 2004, ch. 503, § 1; P.L. 2004, ch. 576, § 1; P.L. 2012, ch. 361, § 1; P.L. 2012, ch. 385, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.4s40-8.4-14-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The reference in
        this section to “Section 131” of the Patient Protection and Affordable Care Act may be intended to be a reference to section 1301 of the act.
@@ -14579,11 +14611,13 @@
       <p>
        P.L. 2004, ch. 343, § 1; P.L. 2004, ch. 354, § 1; P.L. 2011, ch. 241, § 1; P.L. 2011, ch. 253, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.7s40-8.7-4-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title II, Title XVI, and Title XIX of the Social Security Act, referred to in this section, are codified at 42 U.S.C. § 401 et seq., 42 U.S.C. § 1381 et seq., and 42 U.S.C. § 1396 et seq.
       </p>
@@ -14779,11 +14813,13 @@
       <p>
        P.L. 2004, ch. 343, § 1; P.L. 2004, ch. 354, § 1; P.L. 2011, ch. 241, § 1; P.L. 2011, ch. 253, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.7s40-8.7-9-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1619(b) of the Social Security Act, referred to in subsection (c)(3) of this section, is codified at 42 U.S.C. § 1382h(b).
       </p>
@@ -15399,11 +15435,13 @@
        P.L. 2009, ch. 223, § 1) passed by the 2009 General Assembly. Where the changes made by the acts are not in conflict with each other, the section is set out as amended by all three acts. The director of law revision of the joint committee on legislative services has determined that the changes made to subsection (c) by
        P.L. 2009, ch. 69, § 6 are controlling as the latter enacted version of the section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.9s40-8.9-9-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1115 of the Social Security Act, referred to in subsection (k), is codified as 42 U.S.C. § 1315.
       </p>
@@ -15464,11 +15502,13 @@
       <p>
        P.L. 2009, ch. 68, art. 23, § 9; P.L. 2015, ch. 141, art. 5, § 17.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.10s40-8.10-1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1115 of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1315. Section 1915(c) of the Social Security Act is codified at 42 U.S.C. § 1396n(c).
       </p>
@@ -15608,11 +15648,13 @@
       <p>
        P.L. 2009, ch. 68, art. 23, § 9; P.L. 2015, ch. 141, art. 5, § 17.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.10s40-8.10-6-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1115 of the Social Security Act, referred to in this section, is codified as 42 U.S.C. § 1315.
       </p>
@@ -16360,11 +16402,13 @@
       <p>
        P.L. 2018, ch. 106, § 1; P.L. 2018, ch. 110, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.14s40-8.14-1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1115 of the Social Security Act, referred to in this section, is codified as 42 U.S.C. § 1315.
       </p>
@@ -16409,11 +16453,13 @@
       <p>
        P.L. 2018, ch. 106, § 1; P.L. 2018, ch. 110, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c8.14s40-8.14-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified as 42 U.S.C. § 1396 et seq.
       </p>
@@ -22881,11 +22927,13 @@ DELINQUENT CHILDREN
       <p>
        P.L. 1988, ch. 451, § 1; P.L. 1996, ch. 84, § 1; P.L. 2002, ch. 65, art. 24, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c18s40-18-1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Title XIX of the Social Security Act, referred to in this section, is codified at 42 U.S.C. § 1396 et seq.
       </p>
@@ -22950,11 +22998,13 @@ DELINQUENT CHILDREN
       <p>
        P.L. 1988, ch. 451, § 1; P.L. 1989, ch. 542, § 89; P.L. 1999, ch. 83, § 104; P.L. 1999, ch. 130, § 104; P.L. 2002, ch. 292, §§ 18, 100.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c18s40-18-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        42 U.S.C. § 1395x, referred to in the definition of “Certified home health” is part of Title XVIII of the Social Security Act. Title XVIII of the Social Security Act is codified at 42 U.S.C. § 1395 et seq., and Title XIX of the Social Security Act is codified at 42 U.S.C. § 1396 et seq.
       </p>
