--- a/transforms/ri/ocri/r70/gov.ri.code.title.39.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.39.html
@@ -1573,11 +1573,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c01s39-1-2.1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The U.S. Code provision referenced in this section, 33 U.S.C. § 1225, was repealed in 2018 by Pub. L. No. 115-282, Title IV, § 402(e).
       </p>
@@ -5793,11 +5795,13 @@
       <p>
        P.L. 2020, ch. 79, art. 2, § 29, provides that the amendment to this section by that act takes effect on December 31, 2020.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c01s39-1-61-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        20 U.S.C. § 8801, referred to in subsection (f) of this section, has been repealed.
        For current comparable provisions, see 20 U.S.C. § 7801.
@@ -9259,11 +9263,13 @@
       <p>
        P.L. 2006, ch. 239, § 1; P.L. 2006, ch. 241, § 1; P.L. 2006, ch. 245, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c02s39-2-24-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Section 227 of the Victims of Child Abuse Act of 1990, referred to in subsection (d) of this section, was formerly codified as 42 U.S.C. § 13032 and was repealed by Act Oct. 13, 2008,
        Pub. L. No. 110-401, Title V, § 501(b)(1).
@@ -13903,11 +13909,13 @@
       <p>
        P.L. 1992, ch. 62, § 1; P.L. 2012, ch. 99, § 1; P.L. 2012, ch. 105, § 1; P.L. 2015, ch. 54, § 1; P.L. 2015, ch. 55, § 1; P.L. 2016, ch. 511, art. 1, § 17.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c03s39-3-40-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        For state pipeline safety program certifications, see 49 U.S.C. § 60105.
       </p>
@@ -18310,11 +18318,13 @@
       <p>
        P.L. 1976, ch. 28, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c6.1s39-6.1-1-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 U.S.C. § 1654, referred to in this section, is now revised as 49 U.S.C. § 333.
       </p>
@@ -18385,11 +18395,13 @@
       <p>
        P.L. 1976, ch. 28, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c6.1s39-6.1-2-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 U.S.C. § 1654, referred to in this section, is now revised as 49 U.S.C. § 333.
       </p>
@@ -18409,11 +18421,13 @@
       <p>
        P.L. 1976, ch. 28, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c6.1s39-6.1-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 U.S.C. § 1654, referred to in this section, is now revised as 49 U.S.C. § 333.
       </p>
@@ -18457,11 +18471,13 @@
       <p>
        P.L. 1976, ch. 28, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c6.1s39-6.1-5-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 U.S.C. § 1654, referred to in this section, is now revised as 49 U.S.C. § 333.
       </p>
@@ -18614,11 +18630,13 @@
       <p>
        P.L. 1976, ch. 28, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c6.1s39-6.1-12-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 U.S.C. § 1654, referred to in this section, is now revised as 49 U.S.C. § 333.
       </p>
@@ -18699,11 +18717,13 @@
       <p>
        P.L. 1976, ch. 28, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c6.1s39-6.1-16-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        49 U.S.C. § 1654, referred to in this section, is now revised as 49 U.S.C. § 333.
       </p>
@@ -23817,11 +23837,13 @@
        </cite>
        ; P.L. 1958, ch. 87, § 1; P.L. 1960, ch. 71, art. 3, § 32; P.L. 1967, ch. 209, § 6; P.L. 1969, ch. 240, § 13; P.L. 1980, ch. 339, § 1; P.L. 1987, ch. 508, § 1; P.L. 1988, ch. 129, art. 8, § 1; P.L. 1992, ch. 133, art. 34, § 5; P.L. 1995, ch. 370, art. 40, § 118; P.L. 2002, ch. 292, § 129; P.L. 2007, ch. 73, art. 26, § 2; P.L. 2007, ch. 485, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c12s39-12-26-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        For the Unified Carrier Registration System plan and agreement, referred to in this section, see 49 U.S.C. §§ 14504a, 14506.
       </p>
@@ -33386,11 +33408,13 @@
        P.L. 2021, ch. 32, § 9, and
        P.L. 2021, ch. 36, § 9 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c18s39-18-24-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The federal New Freedom program, referred to in subsection (c), has expired. For the current federal program, see 49 U.S.C. § 5310 (enhanced mobility of seniors and individuals with disabilities).
       </p>
@@ -33956,11 +33980,13 @@
       <p>
        P.L. 1969, ch. 240, § 17; P.L. 1993, ch. 46, § 1; P.L. 1999, ch. 188, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c19s39-19-6-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The federal Cable Television Consumer Protection and Competition Act of 1992 (Pub. L. No. 102-385), referred to in the last sentence of this section, enacted 47 U.S.C. §§ 334, 335, 534 — 537, 544a, 548, and 555a, and amended multiple sections in title 47 of the U.S. Code.
       </p>
