--- a/transforms/ri/ocri/r70/gov.ri.code.title.41.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.41.html
@@ -1971,11 +1971,13 @@
       <p>
        P.L. 1976, ch. 341, § 1; P.L. 2010, ch. 13, § 1; P.L. 2016, ch. 528, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t41c3.1s41-3.1-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        Chapter 11 of title 11 of the United States Bankruptcy Code, referred to in subsection (c) of this section, is codified at 11 U.S.C. § 1101 et seq.
       </p>
