--- a/transforms/ri/ocri/r70/gov.ri.code.title.46.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.46.html
@@ -5119,11 +5119,13 @@
       <p>
        P.L. 2001, ch. 144, § 1; P.L. 2001, ch. 163, § 1; P.L. 2007, ch. 340, § 40.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c6.1s46-6.1-4-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subdivision (2) was inserted by the compiler.
       </p>
@@ -33391,11 +33393,13 @@
       <p>
        In 2002, the compiler deleted a subdivision (a)(1) designation, and added the subsection heading in subsection (a).
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c23.1s46-23.1-3-federalactreferences">
        <b>
         Federal Act References.
        </b>
-      </p>
+      </h4>
       <p>
        The bracketed reference to the United States Code in subdivision (b)(7) was inserted by the compiler.
       </p>
